[Deepa Kushwaha] Updated test cases